# worm-node-app

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
releases/: update.json
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: ActivityLog.tsx  ChainStats.tsx  GunNetworkPanel.tsx  Header.tsx  Icons.tsx  LaunchNodeModal.tsx  RewardTracker.tsx  SetupScreen.tsx  StorageStats.tsx  WalletPanel.tsx
src/hooks/: useAutoUpdater.ts  useNodeState.ts  useNotifications.ts
src/utils/: GunPeer.ts  NativeChunkStore.ts  NodeProviderClient.ts
